Changed logo Image, added styling for header

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 			</h1>
 			<div class="search">
 				<form action="get" action="">
-					<label for="search">search
+					<label for="search">
 						<i class="fas fa-search"></i>
-						<input type="text" name="search" id="search">
+						<input type="text" name="search" id="search" placeholder="Search">
 					</label>
 				</form>
 			</div>
