styling for where to stay section added and done some small changes in html

--- a/index.html
+++ b/index.html
@@ -58,16 +58,18 @@
 		<main>
 			<!-- User Search Section Start Here -->
 			<div class="user_search">
-				<!-- Wrapper Start Here -->
-				<div class="wrapper">
-					<!-- Search Info Section Start Here -->
-					<div class="search_info">
+				<!-- Search Info Section Start Here -->
+				<div class="search_info">
+					<div class="aside">
+						<p>Dates</p>
 						<button>Dates</button>
+					</div>
+					<div class="aside">
+						<p>Guests</p>
 						<button>Guests</button>
 					</div>
-					<!-- Search Info Section End Here -->
 				</div>
-				<!-- Wrapper End Here -->
+				<!-- Search Info Section End Here -->
 			</div>
 		<!-- User Search Section End Here -->
 		<!-- Explore Section Start Here -->
@@ -76,6 +78,7 @@
 			<div class="wrapper">
 				<!-- Explore Paris Section Start Here -->
 				<div class="explore_paris">
+					<h2>Explore Paris</h2>
 					<div class="explore_info">
 						<a href="#FIXME" title="Home">
 							<div class="home">
@@ -85,7 +88,7 @@
 						</a>
 					</div>
 					<div class="explore_info">
-						<a href="#FIXME" title="Home">
+						<a href="#FIXME" title="Experiances">
 							<div class="home">
 								<img src="assets/images/2.jpg" alt="Experiances">
 								<span>Experiances</span>
@@ -93,7 +96,7 @@
 						</a>
 					</div>
 					<div class="explore_info">
-						<a href="#FIXME" title="Home">
+						<a href="#FIXME" title="Restaurants">
 							<div class="home">
 								<img src="assets/images/3.jpg" alt="Home">
 								<span>Restaurants</span>
@@ -115,7 +118,7 @@
 									<span>ENTIRE HOUSE · 4 BEDS</span>
 									<p>Small house in Paris Centre 5p</p>
 									<span>₹9,536 per night · Free cancellation</span>
-									<span><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i> <span>263 . Superhost</span></span>
+									<span class="star"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i> <span>263 . Superhost</span></span>
 								</a>
 							</div>
 							<div class="stay_details">
@@ -124,7 +127,7 @@
 									<span>ENTIRE HOUSE · 4 BEDS</span>
 									<p>Small house in Paris Centre 5p</p>
 									<span>₹9,536 per night · Free cancellation</span>
-									<span><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i> <span>263 . Superhost</span></span>
+									<span class="star"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i> <span>263 . Superhost</span></span>
 								</a>
 							</div>
 							<div class="stay_details">
@@ -133,7 +136,7 @@
 									<span>ENTIRE HOUSE · 4 BEDS</span>
 									<p>Small house in Paris Centre 5p</p>
 									<span>₹9,536 per night · Free cancellation</span>
-									<span><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i> <span>263 . Superhost</span></span>
+									<span class="star"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i> <span>263 . Superhost</span></span>
 								</a>
 							</div>
 							<div class="stay_details">
@@ -142,7 +145,7 @@
 									<span>ENTIRE HOUSE · 4 BEDS</span>
 									<p>Small house in Paris Centre 5p</p>
 									<span>₹9,536 per night · Free cancellation</span>
-									<span><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i> <span>263 . Superhost</span></span>
+									<span class="star"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i> <span>263 . Superhost</span></span>
 								</a>
 							</div>
 							<div class="stay_details">
@@ -151,7 +154,7 @@
 									<span>ENTIRE HOUSE · 4 BEDS</span>
 									<p>Small house in Paris Centre 5p</p>
 									<span>₹9,536 per night · Free cancellation</span>
-									<span><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i> <span>263 . Superhost</span></span>
+									<span class="star"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i> <span>263 . Superhost</span></span>
 								</a>
 							</div>
 							<div class="stay_details">
@@ -160,7 +163,7 @@
 									<span>ENTIRE HOUSE · 4 BEDS</span>
 									<p>Small house in Paris Centre 5p</p>
 									<span>₹9,536 per night · Free cancellation</span>
-									<span><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i> <span>263 . Superhost</span></span>
+									<span class="star"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i> <span>263 . Superhost</span></span>
 								</a>
 							</div>
 							<div class="stay_details">
@@ -169,7 +172,7 @@
 									<span>ENTIRE HOUSE · 4 BEDS</span>
 									<p>Small house in Paris Centre 5p</p>
 									<span>₹9,536 per night · Free cancellation</span>
-									<span><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i> <span>263 . Superhost</span></span>
+									<span class="star"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i> <span>263 . Superhost</span></span>
 								</a>
 							</div>
 							<div class="stay_details">
@@ -178,7 +181,7 @@
 									<span>ENTIRE HOUSE · 4 BEDS</span>
 									<p>Small house in Paris Centre 5p</p>
 									<span>₹9,536 per night · Free cancellation</span>
-									<span><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i> <span>263 . Superhost</span></span>
+									<span class="star"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i> <span>263 . Superhost</span></span>
 								</a>
 							</div>
 						</div>
