Added Small all link

--- a/index.html
+++ b/index.html
@@ -185,6 +185,12 @@
 								</a>
 							</div>
 						</div>
+						<div class="show_all">
+							<a href="#FIXME">
+								<span>Show all (2000+)</span>
+								<i class="fas fa-chevron-right"></i>
+							</a>
+						</div>
 					</div>
 				</div>
 			</div>
